comics: Sort pages in natural order

Evince was sorting pages in lexicographic order. In doing so, often
files named page1, page2, ..., page9, page10, ... to be sorted as
page1, page10, ..., page2.

https://bugzilla.gnome.org/show_bug.cgi?id=770695